erDiagram
    ROUTES {
        int route_id PK
        string source
        string destination
        decimal fare
    }
    BUSES {
        int bus_id PK
        int route_id FK
        string bus_number
        int total_seats
    }
    SEATS {
        int seat_id PK
        int bus_id FK
        string seat_number
        boolean is_booked
    }
    BOOKINGS {
        int booking_id PK
        int seat_id FK
        string passenger_name
        date travel_date
    }
    
    ROUTES ||--o{ BUSES : operates
    BUSES ||--o{ SEATS : contains
    SEATS ||--o| BOOKINGS : reserved_by
